# kernel_optimization

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  common.h  functors.h  tensor.cu  tensor.h
nn_operators/: CMakeLists.txt
nn_operators/gemm/: CMakeLists.txt  gemm.h  main.cu  sample_gemm.cu  simt_gemm.h  tensor_core_gemm.h
nn_operators/layernorm/: CMakeLists.txt  layernorm.h  main.cu
nn_operators/softmax/: CMakeLists.txt  main.cu  softmax.h
